[package]
name = "icd-converter"
version = "1.0.0-alpha.3"
edition = "2021"
readme = "README.md"
rust-version = "1.64.0"
repository = "https://github.com/CogDisResLab/icd-converter"
license = "Apache-2.0 OR MIT"
description = "A tool for quickly and efficiently converting between ICD-10 (CM and PCS), and ICD-9 (CM and PCS) codes. based on the GEMs from the CDC."
documentation = "https://docs.rs/icd-converter"
categories = ["command-line-utilities", "bioinformatics", ""]
keywords = ["EHR", "ICD"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "icd_converter_lib"
path = "src/icd_converter_lib/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "icd_converter"
path = "src/icd_converter/main.rs"

[dependencies]
clap = { version = "4.1.9", features = ["cargo", "debug", "env", "string", "unicode", "derive"] }
csv = "1.2.1"
rocket = "0.5.0-rc.2"
serde_json = { version = "1.0.94", features = ["indexmap", "float_roundtrip", "arbitrary_precision", "preserve_order"] }
tokio = { version = "1.26.0", features = ["full"] }

[profile.dev]
opt-level = 1
debug = true

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
